--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,31 +1,26 @@
 ---
 ---
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  preview={brownian-motion.gif},
-  inspirehep_id = {3255}
+@techreport{,
+  author      = {Kotani, Atsuki},
+  title       = {Connecting to Electricity: Technical Change and Regional Development},
+  type        = {mimeo},
+  year        = {2024},
+  abstract    = {The technical change from steam engines to electric motors dramatically transformed
+  manufacturing activities during the Second Industrial Revolution. This paper
+  explores how this technical change progressed and what consequences it brought for
+  the evolution of economic geography. I hypothesize that electric motors powered by
+  purchased electricity lowered barriers to entry in the manufacturing sector due to
+  their significantly lower fixed costs compared to steam engines. To examine this hypothesis,
+  I exploit the historical expansion of electricity grids in early 20th-century
+  Japan and newly digitized establishment-level official records, including information
+  on power sources of establishments. Descriptive evidence shows that electric motors
+  were widely adopted by establishments of all sizes, whereas steam engines were primarily
+  adopted by large establishments, indicating lower fixed costs of electric motors.
+  Using hydropower potential as an instrument, I document that new entrants played a
+  crucial role in driving this technical change and stimulating manufacturing activities.
+  Overall, these findings lend substantial support for the hypothesis. Furthermore, I find
+  that geographical variation in the timing of electricity access influenced subsequent
+  population growth, indicating a persistent impact of this technological shock.},
+  additional_info = {Best Paper Award of the 19th Applied Econometrics Conference},
 }
