--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   title       = {Connecting to Electricity: Technical Change and Regional Development},
   type        = {mimeo},
   year        = {2024},
-  abstract    = {The technical change from steam engines to electric motors dramatically transformed
+  abstract   = {The technical change from steam engines to electric motors dramatically transformed
   manufacturing activities during the Second Industrial Revolution. This paper
   explores how this technical change progressed and what consequences it brought for
   the evolution of economic geography. I hypothesize that electric motors powered by
@@ -21,5 +21,6 @@
   Overall, these findings lend substantial support for the hypothesis. Furthermore, I find
   that geographical variation in the timing of electricity access influenced subsequent
   population growth, indicating a persistent impact of this technological shock.},
-  additional_info = {Best Paper Award of the 19th Applied Econometrics Conference},
+  award = {Best Paper Award of the 19th Applied Econometrics Conference},
+  preview = {map_elect_jpn_1914.png}
 }
