--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
   that geographical variation in the timing of electricity access influenced subsequent
   population growth, indicating a persistent impact of this technological shock.},
   award = {Best Paper Award of the 19th Applied Econometrics Conference},
-  preview = {map_elect_jpn_1914.pngS},
+  preview = {map_elect_jpn_1914.png},
   selected = {true},
   bibtex_show={true},
   additional_info={Draft available soon.},
