add moriguchi award

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   type        = {mimeo},
   year        = {2024},
   abstract   = {The technical change from steam engines to electric motors dramatically transformed manufacturing activities during the Second Industrial Revolution. This paper explores how this technical change progressed and what consequences it brought for the evolution of economic geography. I hypothesize that electric motors powered by purchased electricity lowered barriers to entry in the manufacturing sector due to their significantly lower fixed costs compared to steam engines. To examine this hypothesis, I exploit the historical expansion of electricity grids in early 20th-century Japan and newly digitized establishment-level official records, including information on power sources of establishments. Descriptive evidence shows that electric motors were widely adopted by establishments of all sizes, whereas steam engines were primarily adopted by large establishments, indicating lower fixed costs of electric motors. Using hydropower potential as an instrument, I document that new entrants played a crucial role in driving this technical change and stimulating manufacturing activities. Overall, these findings lend substantial support for the hypothesis. Furthermore, I find that geographical variation in the timing of electricity access influenced subsequent population growth, indicating a persistent impact of this technological shock.},
-  award = {Best Paper Award of the 19th Applied Econometrics Conference},
+  award = {The 27th Moriguchi Prize Paper (Best Paper Award among Japanese PhD Students in Economics) &  Best Paper Award of the 19th Applied Econometrics Conference},
   preview = {map_elect_jpn_1914.png},
   selected = {true},
   bibtex_show={true},
