--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   type        = {mimeo},
   year        = {2024},
   abstract   = {The technical change from steam engines to electric motors dramatically transformed manufacturing activities during the Second Industrial Revolution. This paper explores how this technical change progressed and what consequences it brought for the evolution of economic geography. I hypothesize that electric motors powered by purchased electricity lowered barriers to entry in the manufacturing sector due to their significantly lower fixed costs compared to steam engines. To examine this hypothesis, I exploit the historical expansion of electricity grids in early 20th-century Japan and newly digitized establishment-level official records, including information on power sources of establishments. Descriptive evidence shows that electric motors were widely adopted by establishments of all sizes, whereas steam engines were primarily adopted by large establishments, indicating lower fixed costs of electric motors. Using hydropower potential as an instrument, I document that new entrants played a crucial role in driving this technical change and stimulating manufacturing activities. Overall, these findings lend substantial support for the hypothesis. Furthermore, I find that regions with earlier electricity access experienced substantial population growth throughout the early 20th century and exhibit larger economic activity even in the 21st century. These findings suggest a persistent impact of this technological shock: the rapid increase in entrant activities generated agglomeration forces in manufacturing, with accumulated effects still visible in the spatial distribution of economic activity today.},
-  award = {The 27th Moriguchi Prize Paper &  Best Paper Award of the 19th Applied Econometrics Conference & Best Student Paper Award of the 38th Applied Regional Science Conference},
+  award = {The 27th Moriguchi Prize Paper (Best Paper Award among Japanese Economics PhD Student) &  Best Paper Award of the 19th Applied Econometrics Conference & Best Student Paper Award of the 38th Applied Regional Science Conference},
   preview = {map_elect_jpn_1914.png},
   selected = {true},
   bibtex_show={true},
