--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,5 +10,5 @@
   preview = {map_elect_jpn_1914.png},
   selected = {true},
   bibtex_show={true},
-  additional_info={Draft available soon.},
+  pdf = {JPNELCT.pdf}
 }
