--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,5 +10,6 @@
   preview = {map_elect_jpn_1914.png},
   selected = {true},
   bibtex_show={true},
-  pdf = {JPNELCT.pdf}
+  pdf = {JPNELCT.pdf},
+  slides = {JPNELCT_slides.pdf},
 }
