change file name

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,5 +11,5 @@
   selected = {true},
   bibtex_show={true},
   pdf = {JPNELCT.pdf},
-  slides = {JPNELCT_slides.pdf},
+  slides = {JPNELCT_slide.pdf},
 }
